cabal-version:      3.6
name:               chatroom
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Khanh Hua
maintainer:         khanh.hua@cleverbridge.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable chatroom
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Data
      , Networking
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0
      , mtl ^>=2.2.2
      , network ^>=3.1.2.7
      , bytestring ^>=0.11.3.1
      , utf8-string ^>=1.0.2
      , text ^>=1.2.4.1
    hs-source-dirs:   app
    default-language: Haskell2010
